# anki-quick-color-addon

./: .gitignore  Debug wikionary API.ipynb  LICENSE  README.md  pyproject.toml  requirements.txt
addon/: __init__.py  config.json  translation.py  wiktionary.py
